--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
-beautifulsoup4
-requests
-splinter
-selenium
-python-telegram-bot
+asn1crypto==0.24.0
+beautifulsoup4==4.6.3
+certifi==2018.8.24
+cffi==1.11.5
+chardet==3.0.4
+cryptography==2.3.1
+future==0.16.0
+idna==2.7
+pycparser==2.18
+python-telegram-bot==11.1.0
+requests==2.19.1
+selenium==3.14.0
+six==1.11.0
+splinter==0.9.0
+urllib3==1.23
